--- a/.github/workflows/release_tag.yaml
+++ b/.github/workflows/release_tag.yaml
@@ -2,7 +2,7 @@ name: Release
 
 on:
   pull_request:
-    branches: [master]
+    branches: master
     types: closed
 
 jobs:
@@ -31,7 +31,6 @@ jobs:
           MAJOR=$(echo $VERSION | cut -d. -f1)
           MINOR=$(echo $VERSION | cut -d. -f2)
           PATCH=$(echo $VERSION | cut -d. -f3)
-          LABELS=$(echo "${{ toJson(github.event.pull_request.labels.*.name) }}")
           { if [[ "$LABELS" == *"major"* ]]; then
               MAJOR=$((MAJOR+1))
               MINOR=0
@@ -54,6 +53,6 @@ jobs:
             -t "$MAJOR.$MINOR.$PATCH" \
             -n "<h1>Release for version $MAJOR.$MINOR.$PATCH</h1><h2>Commits since last release</h2><b>$(git log origin/master..origin/develop --no-merges --reverse --format=format:%h\ %s\<br\>\<br\>)</b>" \
             --target master
-        shell: bash
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          LABELS: ${{ toJson(github.event.pull_request.labels.*.name) }}
