--- a/docker-compose.cypress.yaml
+++ b/docker-compose.cypress.yaml
@@ -18,7 +18,7 @@ services:
       CONTENTFUL_SPACE_ID: ${CONTENTFUL_SPACE_ID}
       CONTENTFUL_ACCESS_TOKEN: ${CONTENTFUL_ACCESS_TOKEN}
       CONTENTFUL_ENVIRONMENT_ID: ${CONTENTFUL_ENVIRONMENT_ID}
-      BEDKOM_KEY: ${BEDKOM_KEY}
+      ADMIN_KEY: ${ADMIN_KEY}
 
   backend:
     build: .
@@ -33,7 +33,7 @@ services:
       - '8080:8080'
     # Check if backend is ready, and insert bedpres for testing.
     healthcheck:
-      test: ["CMD-SHELL", "./scripts/submit_happening -t -x $$WEBKOM_KEY || exit 1" ]
+      test: ["CMD-SHELL", "./scripts/submit_happening -t -x $$ADMIN_KEY || exit 1" ]
       interval: 5s
       timeout: 5s
       retries: 5
@@ -42,8 +42,7 @@ services:
       # Value of DEV doesn't matter, only that it's defined.
       DEV: "yes"
       # Values from .env file
-      BEDKOM_KEY: ${BEDKOM_KEY}
-      WEBKOM_KEY: ${WEBKOM_KEY}
+      ADMIN_KEY: ${ADMIN_KEY}
 
   database:
     # Postgres 13.4 is the version Heroku uses.
