--- a/.github/workflows/cypress_test_prod.yaml
+++ b/.github/workflows/cypress_test_prod.yaml
@@ -63,5 +63,5 @@ jobs:
         CONTENTFUL_SPACE_ID: ${{ secrets.CONTENTFUL_SPACE_ID_TESTING }}
         CONTENTFUL_ACCESS_TOKEN: ${{ secrets.CONTENTFUL_ACCESS_TOKEN_TESTING }}
         CONTENTFUL_ENVIRONMENT_ID: testing
-        ADMIN_KEY: ${ADMIN_KEY}
+        ADMIN_KEY: admin-passord
         COMPOSE_FILE: docker-compose.ci.yaml
