--- a/renovate.json
+++ b/renovate.json
@@ -5,6 +5,7 @@
   "labels": [
     "dependencies :handshake:"
   ],
+  "commitMessagePrefix": "⬆️",
   "prHourlyLimit": 0,
   "stabilityDays": 3,
   "prCreation": "not-pending",
