💚 Change CI environment for Sanity

--- a/docker-compose.cypress.yaml
+++ b/docker-compose.cypress.yaml
@@ -15,9 +15,8 @@ services:
     environment:
       BACKEND_URL: http://backend:8080
       # Values from .env file
-      CONTENTFUL_SPACE_ID: ${CONTENTFUL_SPACE_ID}
-      CONTENTFUL_ACCESS_TOKEN: ${CONTENTFUL_ACCESS_TOKEN}
-      CONTENTFUL_ENVIRONMENT_ID: ${CONTENTFUL_ENVIRONMENT_ID}
+      SANITY_TOKEN: ${SANITY_TOKEN}
+      SANITY_DATASET: ${SANITY_DATASET}
       ADMIN_KEY: ${ADMIN_KEY}
 
   backend:
