--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,6 @@
-ADMIN_KEY=admin-passord
+# Needed for backend
+ADMIN_KEY=key_here
+
+# Needed for Cypress testing
+SANITY_TOKEN=token_here
+SANITY_DATASET=dataset_here
